Update plugins, update dependencies, set source and target to java 21, update matrix ci, fix unit tests.